--- a/native-projectBackEnd/package.json
+++ b/native-projectBackEnd/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "mercator-projection": "0.0.2",
     "mongoose": "^5.3.8",
     "nodemon": "^1.18.5"
   }
